[package]
name = "time-commander"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
time = "0.3.37"
serde = { version = "1.0.218", features = ["derive"] }
rusqlite = "0.28"
lazy_static = "1.4"
